--- a/src/main/resources/templates/admin/admin-post-edit-form.html
+++ b/src/main/resources/templates/admin/admin-post-edit-form.html
@@ -57,16 +57,19 @@
                 </select>
             </div>
 
-            <label for="fileUpload" class="file-label">Upload File</label>
-            <input type="file" class="form-control" id="fileUpload" th:field="*{thumbnail}">
+            <label for="fileURL" class="file-label">Upload File</label>
+            <input type="text" class="form-control mb-2" id="fileURL" th:field="*{thumbnail}">
 
             <!-- Rich Text Editor -->
             <label for="bodyDescription" class="col-form-label"><strong>Post Body</strong></label> &nbsp;&nbsp;
+            <button id="showInsertImageButton" style="display: none;" type="button" class="btn btn-warning mb-2" onclick="clickedInsertImage()"> + IMG </button>
             <button id="showHtmlButton" type="button" class="btn btn-danger mb-2" onclick="clickedShowHtml()"> Show Html </button>
             <button id="showBeautifiedButton" type="button" class="btn btn-success mb-2" onclick="clickedShowBeautified()" disabled> Show Beautified </button>
-            <div class="" id="bodyDescription" th:utext="*{body}">
-                    
-            </div>
+            <section style="position:relative;margin-top:5em;border:solid 1px red;">
+                <div id="bodyDescriptionContainer" style="height:10em; min-height:100%; overflow-y:auto;margin-top:5em">
+                   <div id="bodyDescription" style="min-height:100%; height:auto;" th:utext="*{body}"></div>
+                </div>
+            </section>
             <textarea hidden th:field="*{body}" id="bodyDescriptionHtml"></textarea>
             <!-- Visibility -->
             <div class="mb-3">
