--- a/src/main/resources/templates/basic/who.html
+++ b/src/main/resources/templates/basic/who.html
@@ -20,6 +20,11 @@
           <h1>Who We Are</h1>
       </div>
   </header>
+  <div class="container mt-2">
+    <a class="btn btn-lg btn-success"> What We Do </a>
+    <a class="btn btn-lg btn-success"> Mission & Vision </a>
+    <a class="btn btn-lg btn-success"> TLP </a>
+  </div>
   
   <main>
       <section class="base_about-section">
@@ -51,6 +56,11 @@
       </section>
   </main>
 
+  <div class="container mb-2">
+    <a class="btn btn-lg btn-success"> What We Do </a>
+    <a class="btn btn-lg btn-success"> Mission & Vision </a>
+    <a class="btn btn-lg btn-success"> TLP </a>
+  </div>
   <div th:replace="~{fragments/footer :: footer}"></div>
 
 <!-- FontAwesome for Icons -->
