--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -72,7 +72,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link btn btn-default" href="#" style="border: 1px solid green; border-radius: 9px;"><strong>Report Incident</strong></a>
         </li>
       </ul>
     </div>
