subtitle field added and capacity4096 chars

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -37,17 +37,17 @@
         <div class="col-md-6 col-lg-4 text-center">
             <img src="/assets/images/male-face.png" alt="John Doe" height="128" width="128">
             <h3>John Doe</h3>
-            <p>Technical Product Manager</p>
+            <p>Product Manager</p>
         </div>
         <div class="col-md-6 col-lg-4 text-center">
             <img src="/assets/images/male-face.png" alt="Jane Smith" height="128" width="128">
             <h3>Jane Smith</h3>
-            <p>Technical Specialist</p>
+            <p>Technical Product Manager</p>
         </div>
         <div class="col-md-6 col-lg-4 text-center">
             <img src="/assets/images/male-face.png" alt="Emily Johnson" height="128" width="128">
             <h3>Emily Johnson</h3>
-            <p>Software Engineer</p>
+            <p>Technical Specialist</p>
         </div>
         <div class="col-md-6 col-lg-4 text-center">
             <img src="/assets/images/male-face.png" alt="Emily Johnson" height="128" width="128">
