--- a/src/main/resources/static/assets/css/single-post.css
+++ b/src/main/resources/static/assets/css/single-post.css
@@ -20,7 +20,7 @@ h1 {
     text-align: center;
     margin-bottom: 20px;
     font-size: 2.5rem;
-    color: #28a745;
+    color: #0150b1;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -34,7 +34,7 @@ h1 {
     flex: 1 1 65%;
     text-align: justify;
     padding: 20px;
-    border: 1px solid #28a745;
+    border: 1px solid #0150b1;
     border-radius: 8px;
     background-color: #f9fff9;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -48,8 +48,8 @@ h1 {
 .related-posts {
     /* flex: 1 1 30%; */
     padding: 20px;
-    border-left: 4px solid #28a745;
-    background-color: #e8f5e8;
+    border-left: 4px solid #0150b1;
+    background-color: #d5dbf7;
     border-radius: 8px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -62,7 +62,7 @@ h1 {
 .related-posts h2 {
     font-size: 1.8rem;
     margin-bottom: 15px;
-    color: #28a745;
+    color: #0150b1;
 }
 
 .related-posts ul {
@@ -76,13 +76,13 @@ h1 {
 
 .related-posts a {
     text-decoration: none;
-    color: #28a745;
+    color: #0150b1;
     font-weight: 500;
     transition: color 0.3s ease;
 }
 
 .related-posts a:hover {
-    color: #155d27;
+    color: #0150b169;
     text-decoration: underline;
 }
 
