--- a/src/main/resources/templates/basic/who.html
+++ b/src/main/resources/templates/basic/who.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/basicpages.css}">
+  <link th:href="@{/assets/images/favicon.ico}" rel="icon">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -21,9 +22,9 @@
       </div>
   </header>
   <div class="container mt-2">
-    <a class="btn btn-lg btn-success"> What We Do </a>
-    <a class="btn btn-lg btn-success"> Mission & Vision </a>
-    <a class="btn btn-lg btn-success"> TLP </a>
+    <a class="btn btn-lg btn-primary"> What We Do </a>
+    <a class="btn btn-lg btn-primary"> Mission & Vision </a>
+    <a class="btn btn-lg btn-primary"> TLP </a>
   </div>
   
   <main>
@@ -57,9 +58,9 @@
   </main>
 
   <div class="container mb-2">
-    <a class="btn btn-lg btn-success"> What We Do </a>
-    <a class="btn btn-lg btn-success"> Mission & Vision </a>
-    <a class="btn btn-lg btn-success"> TLP </a>
+    <a class="btn btn-lg btn-primary"> What We Do </a>
+    <a class="btn btn-lg btn-primary"> Mission & Vision </a>
+    <a class="btn btn-lg btn-primary"> TLP </a>
   </div>
   <div th:replace="~{fragments/footer :: footer}"></div>
 
