--- a/src/main/resources/templates/basic/mis-vis.html
+++ b/src/main/resources/templates/basic/mis-vis.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/basicpages.css}">
+  <link th:href="@{/assets/images/favicon.ico}" rel="icon">
 </head>
 <body>
     <!-- Navigation Bar -->
