--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,9 +20,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/">Home</a>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="discoverDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Discover
@@ -72,7 +72,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-default" href="#" style="border: 1px solid green; border-radius: 9px;"><strong>Report Incident</strong></a>
+          <a class="nav-link btn btn-default" href="#" style="border: 1px solid rgb(18, 18, 135); border-radius: 9px;"><strong>Report Incident</strong></a>
         </li>
       </ul>
     </div>
