--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,14 +7,14 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script th:src="@{/assets/js/functions.js}"></script>
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" href="/assets/css/homepage.css">
   <link th:href="@{/assets/images/favicon.ico}" rel="icon">
 
-
   <style>
-    /* Custom styles (optional) */
     .navbar-brand {
       font-weight: bold;
     }
@@ -24,48 +24,72 @@
 <!-- Navigation Bar -->
 <div th:replace="~{fragments/header :: menu}"></div>
 
-
-<section class="hesec-hero">
+<div class="header">
+    <div class="header-left">
+      <div class="warning-bar">
+        <span>Cyber Crisis Warning Level</span>
+        <span id="currentDateTime"></span>
+        <span style="margin-left: 1rem; border-left: 20px solid yellowgreen; animation: warningpulse 1.5s infinite; color: #000;">.</span>
+        <span class="highlight">Attention</span>
+      </div>
+      <h1>From <span class="highlight">cyber threats</span> of the country and the people</h1>
+      <p>We will keep you safe.</p>
+    </div>
+    <div class="slider-box" id="text-slider">
+      <h2>Reinforce the security of SME homepages</h2>
+      <p>Provide web vulnerability inspection and web security enhancement tools (Whistle Castle, Cyber Shelter) service for SMEs</p>
+      <a class="btn btn-dark" style="background-color:#3636b2; border-radius: 100px;">Explore</a>
+      <div class="dots" id="slider-dots"></div>
+    </div>
+  </div>
+  
+  <section class="services-section">
+    <h2>Services</h2>
+    <div class="slider-container">
+      <div class="slider" id="service-slider">
+        <a href="/service#vapt" class="service-item">
+            <img src="https://img.icons8.com/ios-filled/50/lock.png" alt="Caregiver" />
+            <p>Vulnerability Assessment & Penetration Testing (VAPT)</p> 
+        </a>
+        <a href="/service#ca" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/50/security-checked.png" alt="Security Check" />
+          <p>Certifying Authority (CA)</p>
+        </a>
+        <a href="/service#it-audit" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/50/domain.png" alt="SME" />
+          <p>IT Audit & Risk Assessment</p>
+        </a>
+        <a href="/service#forensics" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/50/skull.png" alt="Digital Forensics Icon" />
+          <p>Digital Forensics</p>
+        </a>
+        <a href="/service#data-center" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/50/cloud.png" alt="C-TAS" />
+          <p>Data Center Operations</p>
+        </a>
+        <a href="/service#cti" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/50/monitor.png" alt="Mock Training" />
+          <p>Cyber Threat Intelligence (CTI)</p>
+        </a>
+        <a href="/service#cyber-gym" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/50/folder-invoices.png" alt="Training Platform" />
+          <p>Training Program with Cyber Gym</p>
+        </a>
+      </div>
+      <div class="nav-arrows">
+        <button class="nav-arrow" id="prev">‹</button>
+        <button class="nav-arrow" id="next">›</button>
+      </div>
+    </div>
+  </section>
+<!-- <section class="hesec-hero">
   <div class="hesec-hero-content">
       <h1>BGD e-GOV CIRT</h1>
       <p>N-CERT of Bangladesh</p>
       <a href="/who-we-are"><button>Learn More</button></a>
   </div>
-</section>
+</section> -->
 <section class="container mt-5">
-    <h2> Our Pioneers </h2>
-    <div class="row p-5" style="background-color: antiquewhite;border-radius: 18px;">
-        <div class="col-md-6 col-lg-4 text-center">
-            <img src="/assets/images/male-face.png" alt="John Doe" height="128" width="128">
-            <h3>John Doe</h3>
-            <p>Product Manager</p>
-        </div>
-        <div class="col-md-6 col-lg-4 text-center">
-            <img src="/assets/images/male-face.png" alt="Jane Smith" height="128" width="128">
-            <h3>Jane Smith</h3>
-            <p>Technical Product Manager</p>
-        </div>
-        <div class="col-md-6 col-lg-4 text-center">
-            <img src="/assets/images/male-face.png" alt="Emily Johnson" height="128" width="128">
-            <h3>Emily Johnson</h3>
-            <p>Technical Specialist</p>
-        </div>
-        <div class="col-md-6 col-lg-4 text-center">
-            <img src="/assets/images/male-face.png" alt="Emily Johnson" height="128" width="128">
-            <h3>Emily Johnson</h3>
-            <p>Software Engineer</p>
-        </div>
-        <div class="col-md-6 col-lg-4 text-center">
-            <img src="/assets/images/male-face.png" alt="Emily Johnson" height="128" width="128">
-            <h3>Emily Johnson</h3>
-            <p>Software Engineer</p>
-        </div>
-        <div class="col-md-6 col-lg-4 text-center">
-            <img src="/assets/images/male-face.png" alt="Emily Johnson" height="128" width="128">
-            <h3>Emily Johnson</h3>
-            <p>Software Engineer</p>
-        </div>
-    </div>
   <div class="hesec-description container">
       <h2>Description</h2>
       <p>In response to the cyber-attack on Bangladesh Bank in February 2016, 
@@ -105,7 +129,7 @@
                         <h4 th:text="${alert.getTitle()}">Post Title</h4>
                     </a>
                     <p class="card-text" th:text="${#strings.substring(alert.getSubTitle(), 0, 150)} + '....'"></p>
-                    <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="btn btn-success">Read More</a>
+                    <a th:href="'/'+${alert.getCategory()}+'/'+${alert.getUri()}" class="btn btn-primary">Read More</a>
                 </div>
             </div>
         </div>
@@ -125,7 +149,7 @@
                         <h4 th:text="${magazine.getTitle()}">Post Title</h4>
                     </a>
                     <p class="card-text" th:text="${#strings.substring(magazine.getSubTitle(), 0, 150)} + '....'"></p>
-                    <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="btn btn-success">Read More</a>
+                    <a th:href="'/'+${magazine.getCategory()}+'/'+${magazine.getUri()}" class="btn btn-primary">Read More</a>
                 </div>
             </div>
         </div>
@@ -145,7 +169,7 @@
                         <h4 th:text="${news.getTitle()}">Post Title</h4>
                     </a>
                     <p class="card-text" th:text="${#strings.substring(news.getSubTitle(), 0, 150)} + '....'"></p>
-                    <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="btn btn-success">Read More</a>
+                    <a th:href="'/'+${news.getCategory()}+'/'+${news.getUri()}" class="btn btn-primary">Read More</a>
                 </div>
             </div>
         </div>
@@ -179,6 +203,64 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script>
+    updateClock();
+    setInterval(updateClock, 30000);
 
+    let slider = $("#service-slider");
+    let itemWidth = $('.service-item').outerWidth(true);
+    let currentPos = 0;
+    $("#next").click(function () {
+      if (currentPos + slider.width() < slider[0].scrollWidth) {
+        currentPos += itemWidth;
+        slider.css("transform", `translateX(-${currentPos}px)`);
+      }
+    });
+
+    $("#prev").click(function () {
+      if (currentPos > 0) {
+        currentPos -= itemWidth;
+        slider.css("transform", `translateX(-${currentPos}px)`);
+      }
+    });
+
+
+    sliderData.forEach((_, index) => {
+      $("#slider-dots").append(`<div class="dot" data-index="${index}"></div>`);
+    });
+    $(".dot").eq(0).addClass("active");
+    let currentSlide = 0;
+    setInterval(() => {
+      currentSlide = (currentSlide + 1) % sliderData.length;
+      const data = sliderData[currentSlide];
+
+      $("#text-slider h2").fadeOut(300, function () {
+        $(this).text(data.title).fadeIn(300);
+      });
+
+      $("#text-slider p").fadeOut(300, function () {
+        $(this).text(data.text).fadeIn(300);
+      });
+
+      $(".dot").removeClass("active");
+      $(".dot").eq(currentSlide).addClass("active");
+    }, 5000);
+
+    $(".dot").on("click", function () {
+      currentSlide = $(this).data("index");
+      const data = sliderData[currentSlide];
+
+      $("#text-slider h2").fadeOut(300, function () {
+        $(this).text(data.title).fadeIn(300);
+      });
+
+      $("#text-slider p").fadeOut(300, function () {
+        $(this).text(data.text).fadeIn(300);
+      });
+
+      $(".dot").removeClass("active");
+      $(this).addClass("active");
+    });
+</script>
 </body>
 </html> 
