--- a/src/main/resources/templates/post/post-list.html
+++ b/src/main/resources/templates/post/post-list.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text="${t}">Page Title</title>
   <!-- Bootstrap CSS -->
+  <link th:href="@{/assets/images/favicon.ico}" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
@@ -44,6 +45,10 @@
         <!-- Pagination -->
         <div class="pagination text-center mt-4">
             <a th:href="'/' + ${category} + '?page='+ ${currentPage - 1}" th:if="${currentPage > 0}">Previous</a>
+            <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPage - 1)}" 
+            th:classappend="${i == currentPage} ? 'active'">
+                <a class="page-link" th:href="'/'+ ${category}+'?page='+${i}" th:text="${i + 1}"></a>
+            </li>
             <a th:href="'/' + ${category} + '?page='+ ${currentPage + 1}" th:if="${currentPage < totalPage - 1}">Next</a>
         </div>
     </div>
